--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ python = "^3.7.3"
 "ruamel.yaml" = "^0.17.10"
 
 [tool.poetry.dev-dependencies]
-nonebot2 = "^2.0.0a13"
-nonebot-adapter-cqhttp = "^2.0.0a13"
+nonebot2 = "^2.0.0b1"
+nonebot-adapter-onebot = "^2.0.0b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
