--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,13 @@ repository = "https://github.com/rmuchan/nonebot-plugin-flexperm"
 keywords = ["nonebot"]
 
 [tool.poetry.dependencies]
-python = "^3.7.3"
-nonebot2 = "^2.0.0b1"
-nonebot-adapter-onebot = "^2.0.0b1"
+python = "^3.8"
+nonebot2 = "^2.0.0rc2"
+nonebot-adapter-onebot = "^2.2.0"
 "ruamel.yaml" = "^0.17.10"
+nonebot-plugin-apscheduler = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
-nonebot-plugin-apscheduler = "^0.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
