--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,12 @@ keywords = ["nonebot"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-nonebot2 = "^2.0.0rc2"
-nonebot-adapter-onebot = "^2.2.0"
+nonebot2 = "^2.0.0"
 "ruamel.yaml" = "^0.17.10"
 nonebot-plugin-apscheduler = "^0.2.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+nonebot-adapter-onebot = "^2.2.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
